--- a/src/app/todolist/todolist.html
+++ b/src/app/todolist/todolist.html
@@ -41,8 +41,8 @@
         <div class="col-md-5">
             <ul class="list-group">
                 <li *ngFor="let todo of (list | asCompletedFilter:showCompleted); let i=index" class="list-group-item">
-                <span title="Remove todo" class="badge" (click)="delTodo(i) ">x</span>
-                <label><input type="checkbox" [(ngModel)]="todo.done" name="todoDone"> {{todo.name}}</label>
+                    <span title="Remove todo" class="badge" (click)="delTodo(i) ">x</span>
+                    <as-todo [todo]="todo"></as-todo>
                 </li>
             </ul>
         </div>
